--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 20px 0;
-  background-color: #f7f7f5;
+  background-color: #f6f7fc;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
